channel summary reports Signed-off-by: SVR <wgspriyanka@gmail.com>

--- a/src/main/webapp/resources/cashier/channelBilledBill.xhtml
+++ b/src/main/webapp/resources/cashier/channelBilledBill.xhtml
@@ -32,7 +32,7 @@
                 <f:facet name="header">  
                     <h:outputLabel value="ID"/>
                 </f:facet>
-                <h:outputLabel value="#{b.insId}"/>
+                <h:outputLabel value="#{b.deptId}"/>
             </p:column>
             <p:column headerText="Id" rendered="#{cc.attrs.agent}" >
                 <f:facet name="header">  
