--- a/src/main/webapp/resources/cashier/channelCancelBill.xhtml
+++ b/src/main/webapp/resources/cashier/channelCancelBill.xhtml
@@ -32,13 +32,13 @@
                 <f:facet name="header">  
                     <h:outputLabel value="ID"/>
                 </f:facet>
-                <h:outputLabel value="#{b.insId}"/>
+                <h:outputLabel value="#{b.deptId}"/>
             </p:column>
             <p:column headerText="Ref Bill No"  >
                 <f:facet name="header">  
                     <h:outputLabel value="Ref Bill No"/>
                 </f:facet>
-                <h:outputLabel  value="#{b.billedBill.insId}"/>
+                <h:outputLabel  value="#{b.billedBill.deptId}"/>
             </p:column>
             <p:column headerText="Id" rendered="#{cc.attrs.agent}" >
                 <f:facet name="header">  
