--- a/src/main/webapp/channel/channel_report_by_bill_class_by_user.xhtml
+++ b/src/main/webapp/channel/channel_report_by_bill_class_by_user.xhtml
@@ -100,8 +100,8 @@
                                 <f:facet name="header" >
                                     <p:outputLabel value="Bill Number" />
                                 </f:facet>
-                                <p:outputLabel value="#{b.insId}" rendered="#{b.paidBill eq null}" style="color: green;"/>
-                                <p:outputLabel value="#{b.paidBill.insId}" rendered="#{b.paidBill ne null}" />
+                                <p:outputLabel value="#{b.deptId}" rendered="#{b.paidBill eq null}" style="color: green;"/>
+                                <p:outputLabel value="#{b.paidBill.deptId}" rendered="#{b.paidBill ne null}" />
                                 <f:facet name="footer" >
                                     <p:outputLabel value="Total" />
                                 </f:facet>
@@ -218,7 +218,7 @@
                                 <f:facet name="header" >
                                     <p:outputLabel value="Bill Number" />
                                 </f:facet>
-                                <p:outputLabel value="#{b.insId}" />
+                                <p:outputLabel value="#{b.deptId}" />
                                 <f:facet name="footer" >
                                     <p:outputLabel value="Total" />
                                 </f:facet>
@@ -227,7 +227,7 @@
                                 <f:facet name="header" >
                                     <p:outputLabel value="Ref. Bill Number" />
                                 </f:facet>
-                                <p:outputLabel value="#{b.billedBill.paidBill.insId}" />
+                                <p:outputLabel value="#{b.billedBill.paidBill.deptId}" />
                             </p:column>
                             <p:column style="text-align: left;" >
                                 <f:facet name="header" >
@@ -337,14 +337,14 @@
                                 <f:facet name="header" >
                                     <p:outputLabel value="Bill Number" />
                                 </f:facet>
-                                <p:outputLabel value="#{b.insId}" />
+                                <p:outputLabel value="#{b.deptId}" />
 
                             </p:column>
                             <p:column>
                                 <f:facet name="header" >
                                     <p:outputLabel value="Ref. Bill Number" />
                                 </f:facet>
-                                <p:outputLabel value="#{b.billedBill.paidBill.insId}" />
+                                <p:outputLabel value="#{b.billedBill.paidBill.deptId}" />
                             </p:column>
                             <p:column style="text-align: left;" >
                                 <f:facet name="header" >
