Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/channel/channel_doctor_view.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view.xhtml
@@ -13,7 +13,7 @@
                 <p:printer target="doctorView"/>           
             </p:commandButton>
             <p:commandButton ajax="false" action="/channel/channel_booking" value="Back" ></p:commandButton>
-            <p:panel id="doctorView">
+            <p:panel id="doctorView" styleClass="noBorder summeryBorder">
                 <f:facet name="header">
                     <h:panelGrid columns="2">
                         <p:outputLabel value="Consultant"/>
