--- a/src/main/webapp/channel/channel_doctor_view_today.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today.xhtml
@@ -8,13 +8,18 @@
 
     <ui:define name="content">
         <p:outputLabel value="Total Doctor Fees"/>
-        <p:panel>
+        <h:commandButton value="Print" action="#" >
+            <p:printer target="pan1" />
+        </h:commandButton>
+        <p:panel id="pan1" styleClass="noBorder summeryBorder">
             <f:facet name="header">
                 <h:panelGrid columns="2">                    
                     <p:outputLabel value="Date"/>
                     <p:clock pattern="dd MMMM yyyy" mode="server"  />           
                 </h:panelGrid>
+
             </f:facet>
+
 
             <p:dataTable value="#{channelReportController.totalDoctor}" var="bs" sortBy="#{bs.common}" >
                 <p:column headerText="Consultant">#{bs.consultant.person.nameWithTitle}</p:column>              
