Channel Doc Payment Changes Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -74,7 +74,8 @@
                     </f:facet>
 
                     <p:panelGrid columns="2">  
-
+                        <p:outputLabel value="Id" rendered="#{sheduleController.current ne null}"/>
+                        <p:outputLabel value="#{sheduleController.current.id}" rendered="#{sheduleController.current ne null}"/>
                         <p:outputLabel value="Session Name"/>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.name}"/>
                         
