--- a/src/main/webapp/channel/channel_doctor_view_today.xhtml
+++ b/src/main/webapp/channel/channel_doctor_view_today.xhtml
@@ -4,39 +4,74 @@
                 template="/resources/template/template.xhtml"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:h="http://java.sun.com/jsf/html">
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ch="http://java.sun.com/jsf/composite/channel"
+                xmlns:pa="http://java.sun.com/jsf/composite/paymentMethod"
+                xmlns:au="http://java.sun.com/jsf/composite/autocomplete">
 
     <ui:define name="content">
-        <p:outputLabel value="Total Doctor Fees"/>
-        <h:commandButton value="Print" action="#" >
-            <p:printer target="pan1" />
-        </h:commandButton>
-        <p:panel id="pan1" styleClass="noBorder summeryBorder">
-            <f:facet name="header">
-                <h:panelGrid columns="2">                    
-                    <p:outputLabel value="Date"/>
-                    <p:clock pattern="dd MMMM yyyy" mode="server"  />           
-                </h:panelGrid>
-
-            </f:facet>
-
-
-            <p:dataTable value="#{channelReportController.totalDoctor}" var="bs" sortBy="#{bs.common}" >
-                <p:column headerText="Consultant">#{bs.consultant.person.nameWithTitle}</p:column>              
-                <p:column headerText="Valid Patient">#{bs.billCount+bs.billCount_c}</p:column>
-                <p:column headerText="Total">#{bs.billFee+bs.billFee_c}</p:column>
-                <p:summaryRow>
-                    <p:column colspan="2">
-                        <h:outputLabel value="Total"/>
-                    </p:column>             
-                    <p:column >
-                        <h:outputLabel value="#{channelReportController.total}"/>
-                    </p:column>                  
-
-                </p:summaryRow>
-            </p:dataTable>
-
-        </p:panel>
+        <h:form id="form">
+            <p:panel id="pan1" styleClass="noBorder summeryBorder">
+                <f:facet name="header" >
+                    <p:commandButton value="Print" action="#" styleClass="noPrintButton">
+                        <p:printer target="pan1" />
+                    </p:commandButton>
+                </f:facet>
+                <p:dataTable value="#{channelReportController.channelDoctors}" var="bs" sortBy="#{bs.common}" rowIndexVar="i" >
+                    <f:facet name="header">
+                        <p:outputLabel value="#{sessionController.loggedUser.institution.name}" style="fon"/><br></br>
+                        <p:outputLabel value="#{sessionController.loggedUser.institution.address}"/><br></br>
+                        <p:outputLabel value="Total Doctor Fees"/><br></br>
+                        <p:outputLabel value="Date: "/>
+                        <p:outputLabel value="#{commonController.currentDateTime}" >
+                            <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a " />
+                        </p:outputLabel>     
+                    </f:facet>
+                    <p:column headerText="Consultant" style="width: 10px!important;">
+                        <f:facet name="header">
+                            <p:outputLabel value="No" style="float: left;"/>
+                        </f:facet>
+                        <p:outputLabel value="#{i+1}" />
+                    </p:column>
+                    <p:column headerText="Consultant" style="width: 1000px!important;">
+                        <f:facet name="header">
+                            <p:outputLabel value="Consultant" style="float: left;"/>
+                        </f:facet>
+                        <p:outputLabel value="#{bs.consultant.person.nameWithTitle}" />
+                    </p:column>   
+                    <p:column headerText="Bill" styleClass="numberCol">
+                        <p:outputLabel value="#{bs.billCount}" >
+                            <f:convertNumber pattern="#,##0"/>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column headerText="Cancel" styleClass="numberCol">
+                        <p:outputLabel value="#{bs.billCanncelCount}" >
+                            <f:convertNumber pattern="#,##0"/>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column headerText="Refund" styleClass="numberCol">
+                        <p:outputLabel value="#{bs.refundedCount}" >
+                            <f:convertNumber pattern="#,##0"/>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column headerText="Valid Patient" styleClass="numberCol" style="width: 150px!important;">
+                        <p:outputLabel value="#{bs.billCount-(bs.billCanncelCount+bs.refundedCount)}" >
+                            <f:convertNumber pattern="#,##0"/>
+                        </p:outputLabel>
+                    </p:column>
+                    <p:column headerText="Total" styleClass="numberCol">
+                        <p:outputLabel value="#{bs.billFee+bs.billCanncelFee+bs.refundFee}" >
+                            <f:convertNumber pattern="##,###,##0.00" />
+                        </p:outputLabel>
+                        <f:facet name="footer">
+                            <p:outputLabel value="#{channelReportController.total}" style="float: right;">
+                                <f:convertNumber pattern="##,###,##0.00" />
+                            </p:outputLabel>
+                        </f:facet>
+                    </p:column>
+                </p:dataTable>
+            </p:panel>
+        </h:form>
     </ui:define>
 
 
