--- a/src/main/webapp/resources/pharmacy/saleBill_five_five.xhtml
+++ b/src/main/webapp/resources/pharmacy/saleBill_five_five.xhtml
@@ -357,7 +357,7 @@
                             <h:outputLabel value="Total" style="font-size: 15px; font-weight: bold;"/>
                         </td>
                         <td  class="totalsBlock" style="text-align: right!important; width: 40%; padding-right: 30px;">
-                            <h:outputLabel value="#{cc.attrs.bill.netTotal}" style="font-size: 15px; font-weight: bold;">
+                            <h:outputLabel value="#{cc.attrs.bill.total}" style="font-size: 15px; font-weight: bold;">
                                 <f:convertNumber pattern="#,##0.00" />
                             </h:outputLabel>
                         </td>
