Channel Report Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/channel/channel_cancel_view_today.xhtml
+++ b/src/main/webapp/channel/channel_cancel_view_today.xhtml
@@ -21,7 +21,7 @@
                     <f:facet name="header">
                         <p:outputLabel value="#{sessionController.loggedUser.institution.name}" style="fon"/><br></br>
                         <p:outputLabel value="#{sessionController.loggedUser.institution.address}"/><br></br>
-                        <p:outputLabel value="Full Paid Absent Patient List"/><br></br>
+                        <p:outputLabel value="Full Paid Cancel Patient List"/><br></br>
                         <p:outputLabel value="Date: "/>
                         <p:outputLabel value="#{commonController.currentDateTime}" >
                             <f:convertDateTime pattern="yyyy MMMM dd" />
