--- a/src/main/webapp/channel/channel_report_cashier_summery_date_created.xhtml
+++ b/src/main/webapp/channel/channel_report_cashier_summery_date_created.xhtml
@@ -14,7 +14,8 @@
 
             <p:panel header="Statement Of Agent Account Total And Count">
                 <f:facet name="header">
-                    <p:outputLabel value="Agent Wise Appoinment Totals And Count" />
+                    <p:outputLabel value="User Today All Paid Channel Summery" />
+                    <p:outputLabel value="****Do Not Change This Report****" style="color: red"/>
                     <p:commandButton id="btnBack" value="Back" 
                                      action="/channel/channel_reports" style="float: right;"
                                      ajax="false">
@@ -29,8 +30,6 @@
                         <h:outputLabel value="To Date"/>
                         <p:calendar value="#{channelReportTempController.toDate}" navigator="true" pattern="dd MMM yyyy hh:mm:ss a" >
                         </p:calendar>
-                        <h:outputLabel value="By Session Date"/> 
-                        <p:selectBooleanCheckbox value="#{channelReportTempController.sessoinDate}" />
                         <h:outputLabel value="Doc Fee Only"/> 
                         <p:selectBooleanCheckbox value="#{channelReportTempController.withDocPayment}" >
                             <p:ajax event="change" process="@this" update="pan1" listener="#{channelReportTempController.listnerDoc()}" />
@@ -46,11 +45,11 @@
                                         value="#{channelReportTempController.reportKeyWord.webUser}" ></p:autoComplete>
                     </h:panelGrid> 
                     <h:panelGrid columns="3">
-                        <p:commandButton action="#{channelReportTempController.createUsercollectionByDate()}" value="Process" ajax="false" />
+                        <p:commandButton action="#{channelReportTempController.createUsercollectionByDateCreated()}" value="Process" ajax="false" />
                         <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
-                        <p:commandButton actionListener="#{channelReportTempController.createUsercollectionByDate()}" ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
+                        <p:commandButton actionListener="#{channelReportTempController.createUsercollectionByDateCreated()}" ajax="false" value="Excel" styleClass="noPrintButton" style="float: right;" >
                             <pe:exporter type="xlsx" target="tbl1" fileName="channel_report_cashier_summery_date"  />
                         </p:commandButton>
                     </h:panelGrid> 
@@ -73,7 +72,7 @@
                             </p:outputLabel>
                         </f:facet>
 
-                        <p:column>
+                        <p:column style="width: 1000px!important;">
                             <f:facet name="header">
                                 <p:outputLabel value="Date" />
                             </f:facet>
