--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -54,7 +54,7 @@
                             </f:ajax>
                         </p:commandButton>
                         <p:commandButton ajax="false" id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                    return false;" action="#{sheduleController.delete()}"  value="Delete"  >
+                            return false;" action="#{sheduleController.delete()}"  value="Delete" disabled="#{!webUserController.hasPrivilege('ChannellingChannelShedulRemove')}" >
                         </p:commandButton>
 
 
